* 0.151

- Upgrade to Airbase 71.
- Upgrade to Jersey 2.26.
- Add instance sizes to HyperLogLog and SparseHll.

* 0.150

- Upgrade to Airbase 68.
- Upgrade to Jetty 9.4.7.v20170914.
- Prevent "Address already in use" for HTTP server.
- Remove @Inject from Logger.
- Add HTTP/2 input buffer size config.
- Add support for monitoring the Jetty client shared thread pool.
- Ensure Jetty client request doesn't live past synchronous return.
- Enable detailed dumps for Jetty thread pools, which will help getting
  more information when debugging with the JMX dump operation.
- Add support for PostgreSQL in dbpool.
- Delete FileUtils from testing module.
- Make HttpClientModule non-public.
- Cleanup dependencies for various modules.
- Skip duplicate rows when printing configuration in Bootstrap.
- Support generalized suffix in Java version strings.

* 0.149

- Upgrade to Jetty 9.4.6.v20170531
- Fix UnknownFormatConversionException for config errors.
- Allow specifying etc directory for launcher.

* 0.148

- Add @ConfigSecuritySensitive annotation to prevent printing config values.

* 0.147

- Upgrade to Airbase 63
- Upgrade to Guava 21.0
- Add TestingHttpClient.Processor implementation that delegates to JAX-RS resource.

* 0.146

- Allow configuring secure random algorithm for HTTP client and server.

* 0.145

- Skip empty Optional fields in JSON serialization.
- Remove usage of deprecated APIs for all dependencies.

* 0.144

- Use JsonMapperParsingException in SmileMapper.
- Bean Validation is no longer performed for JAX-RS request objects.

* 0.143

- Deprecate usages of CompletableFuture or replace with ListenableFuture,
  which is easier to use and less error prone.
- Add MoreFutures methods for ListenableFuture.
- Replace RuntimeIOException with UncheckedIOException in HTTP client.
- Fix sporadic failure due to thread-safety when performing Bean Validation.
- Support using java.time.Instant for event client.
- Validate scheme for HTTP client Request objects.

* 0.142
