@@ -46,6 +46,7 @@ public class TestHttpServerConfig
                 .setHttpsExcludedCipherSuites("")
                 .setKeystorePath(null)
                 .setKeystorePassword(null)
+                .setKeyManagerPassword(null)
                 .setLogPath("var/log/http-request.log")
                 .setLogEnabled(true)
                 .setLogMaxFileSize(new DataSize(Long.MAX_VALUE, BYTE))
@@ -83,6 +84,7 @@ public class TestHttpServerConfig
                 .put("http-server.https.port", "2")
                 .put("http-server.https.keystore.path", "/keystore")
                 .put("http-server.https.keystore.key", "keystore password")
+                .put("http-server.https.keymanager.password", "keymanager password")
                 .put("http-server.https.secure-random-algorithm", "NativePRNG")
                 .put("http-server.https.included-cipher", "TLS_RSA_WITH_AES_128_CBC_SHA,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA")
                 .put("http-server.https.excluded-cipher", "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA")
@@ -121,6 +123,7 @@ public class TestHttpServerConfig
                 .setHttpsExcludedCipherSuites("TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA")
                 .setKeystorePath("/keystore")
                 .setKeystorePassword("keystore password")
+                .setKeyManagerPassword("keymanager password")
                 .setSecureRandomAlgorithm("NativePRNG")
                 .setLogPath("/log")
                 .setLogEnabled(false)
