@@ -3,6 +3,7 @@
 - Upgrade to Airbase 71.
 - Upgrade to Jersey 2.26.
 - Add instance sizes to HyperLogLog and SparseHll.
+- Support SSL KeyManager password for HTTP server.
 
 * 0.150
 
